[project]
name = "shear-wall-reinforcement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "concreteproperties>=0.7.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0",
    "sectionproperties>=3.10.0",
    "streamlit>=1.41.0",
    "altair>=5.4.0",
]
